// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Messages component render list of following 1`] = `
"<div class=\\"border-b flex flex-row justify-between border-r\\">
  <h2 class=\\"text-xl font-semibold pl-3 pt-3 pb-3\\">Messages</h2>
  <div class=\\"flex flex-row\\"><button class=\\"search-following\\"><svg xmlns=\\"http://www.w3.org/2000/svg\\" fill=\\"none\\" viewBox=\\"0 0 24 24\\" stroke=\\"currentColor\\" class=\\"w-9 p1 h-auto hover:bg-gray-300 my-2 rounded-full mr-3\\">
        <path stroke-linecap=\\"round\\" stroke-linejoin=\\"round\\" stroke-width=\\"2\\" d=\\"M12 6v6m0 0v6m0-6h6m-6 0H6\\"></path>
      </svg></button></div>
</div>
<div class=\\"flex flex-col items-center w-full border-r min-h-screen\\">
  <div class=\\"w-3/4 sm:w-1/2 border shadow mt-4 z-10 fixed bg-white\\">
    <div class=\\"border-b shadow-sm flex flex-row justify-between\\">
      <h2 class=\\"font-semibold text-lg p-2\\">Send message to:</h2><button><svg xmlns=\\"http://www.w3.org/2000/svg\\" fill=\\"none\\" viewBox=\\"0 0 24 24\\" stroke=\\"currentColor\\" class=\\"w-10 p-1 h-auto text-red-500 hover:bg-red-50 rounded-full mr-2\\">
          <path stroke-linecap=\\"round\\" stroke-linejoin=\\"round\\" stroke-width=\\"2\\" d=\\"M10 14l2-2m0 0l2-2m-2 2l-2-2m2 2l2 2m7-2a9 9 0 11-18 0 9 9 0 0118 0z\\"></path>
        </svg></button>
    </div><button class=\\"chat-link border-b w-full hover:bg-gray-100 flex flex-row items-center p-2\\"><img src=\\"/dan.jpg\\" class=\\"w-8 h-auto rounded-full\\">
      <p class=\\"px-2\\">Dan Molloy</p>
    </button>
    <div class=\\"m-8\\">
      <h3 class=\\"text-xl font-bold\\">You can only contact users you follow.</h3>
      <p>Find others in Explore.</p>
    </div>
  </div><a class=\\"chat-preview border-b flex flex-row p-4 justify-between hover:bg-gray-100 w-full\\" href=\\"/messages/395ed01a-5e12-4220-b94e-ab0bc76a691c\\">
    <div class=\\"flex flex-row\\"><img src=\\"/dan.jpg\\" class=\\"rounded-full w-12\\">
      <div class=\\"flex flex-col ml-4\\">
        <h3 class=\\"font-semibold\\">Dan Molloy</h3>
        <div class=\\"flex flex-row\\">
          <p class=\\"font-bold\\">@danmolloy:
            Once finished, you c<span class=\\"text-gray-400\\"> ...</span></p>
        </div>
      </div>
    </div>
    <p class=\\"text-gray-500\\">Wed Nov 24 2021 11:03</p>
  </a>
</div>"
`;

exports[`Messages component renders without error 1`] = `
"<div class=\\"border-b flex flex-row justify-between border-r\\">
  <h2 class=\\"text-xl font-semibold pl-3 pt-3 pb-3\\">Messages</h2>
  <div class=\\"flex flex-row\\"><button class=\\"search-following\\"><svg xmlns=\\"http://www.w3.org/2000/svg\\" fill=\\"none\\" viewBox=\\"0 0 24 24\\" stroke=\\"currentColor\\" class=\\"w-9 p1 h-auto hover:bg-gray-300 my-2 rounded-full mr-3\\">
        <path stroke-linecap=\\"round\\" stroke-linejoin=\\"round\\" stroke-width=\\"2\\" d=\\"M12 6v6m0 0v6m0-6h6m-6 0H6\\"></path>
      </svg></button></div>
</div>
<div class=\\"flex flex-col items-center w-full border-r min-h-screen\\"><a class=\\"chat-preview border-b flex flex-row p-4 justify-between hover:bg-gray-100 w-full\\" href=\\"/messages/395ed01a-5e12-4220-b94e-ab0bc76a691c\\">
    <div class=\\"flex flex-row\\"><img src=\\"/dan.jpg\\" class=\\"rounded-full w-12\\">
      <div class=\\"flex flex-col ml-4\\">
        <h3 class=\\"font-semibold\\">Dan Molloy</h3>
        <div class=\\"flex flex-row\\">
          <p class=\\"font-bold\\">@danmolloy:
            Once finished, you c<span class=\\"text-gray-400\\"> ...</span></p>
        </div>
      </div>
    </div>
    <p class=\\"text-gray-500\\">Wed Nov 24 2021 11:03</p>
  </a></div>"
`;
